Update github-actions-demo.yml fix branch name var

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,5 +17,5 @@ jobs:
     steps:
       - run: |
           echo "event name is:" ${{ github.event_name }}
-          echo "event name is:" ${{ github.branch_name }}
+          echo "branch name is:" ${{ github.head_ref || github.ref_name  }}
           
