--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -11,7 +11,7 @@ on:
     outputs:
       current-time:
         description: 'The time when greeting.'
-        value: ${{ jobs.reusable-job.outputs.current-time }}
+        value: ${{ jobs.reusable-job.env.current-time }}
         
 jobs:
   reusable-job:
@@ -24,4 +24,4 @@ jobs:
 
       - name: Set time
         id: time
-        run: echo "time=$(date)" >> $GITHUB_OUTPUT        
+        run: echo "time=$(date+1000)" >> $GITHUB_ENV        
